# peptide_v2

./: .gitignore  LICENSE  README.md  app.py  colab_run.ipynb  main.py  pyproject.toml  requirements.txt
core/: boltz_predictor.py  mpnn_generator.py  pdb_utils.py  pipeline.py  prodigy_scorer.py  rcsb_client.py  structure_scorer.py
data/example_targets/: 2itx.cif
ui/: results.py  sidebar.py  structure_viewer.py
